--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "football",
   "version": "0.1.0",
+  "homepage": "https://geosaps.github.io/football-app-2.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-fade": "^1.1.1",
@@ -10,6 +12,8 @@
     "react-scripts": "1.0.13"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
